--- a/healthworld/AndroidManifest.xml
+++ b/healthworld/AndroidManifest.xml
@@ -6,18 +6,17 @@
 
     <uses-sdk android:minSdkVersion="7" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:label="@string/app_name"
-            android:name=".HealthworldActivity" >
+    <application android:name=".AppApplication"
+        android:label="@string/app_name"
+        android:icon="@drawable/icon"
+        android:theme="@android:style/Theme.Black.NoTitleBar">
+        <activity android:name="com.tianxia.lib.baseworld.main.MainTabFrame" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".setting.SettingTabActivity"></activity>
     </application>
 
 </manifest>
