--- a/floworld/AndroidManifest.xml
+++ b/floworld/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Black.NoTitleBar">
         <activity android:name="com.tianxia.lib.baseworld.main.MainTabFrame"
-                  android:label="@string/app_name">
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
