move the data server from github to kaiyuanxiangmu.com
also:
1.use the asychttpclient source instead of jar for need modifing the response entity encode
2.start design the AppUpdate module

--- a/floworld/assets/config.json
+++ b/floworld/assets/config.json
@@ -3,6 +3,6 @@
            "version-code":1,
             "version-name":"0.0.1"
           },
-     "net":{"config":"https://raw.github.com/openproject/world/master/floworld/assets/config.json"
+     "net":{"config":"http://api.kaiyuanxiangmu.com/floworld/assets/config.json"
            }
 }
