--- a/floworld/data/config.json
+++ b/floworld/data/config.json
@@ -3,7 +3,7 @@
            "version-code":1,
             "version-name":"0.0.1"
           },
-     "net":{"config":"https://raw.github.com/openproject/world/master/floworld/data/config.json",
-            "appreciate":"https://raw.github.com/openproject/world/master/floworld/data/json/appreciate.json"
+     "net":{"config":"http://api.kaiyuanxiangmu.com/floworld/data/config.json",
+            "appreciate":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate.json"
            }
 }
