add the prefix for latest pic and update the lastest data

--- a/floworld/data/json/appreciate/appreciate-archiver.json
+++ b/floworld/data/json/appreciate/appreciate-archiver.json
@@ -1,5 +1,6 @@
 {
     "archiver":[
+               {"index":"第6期",title:"十二月花","date":"2012.1.26 ~ 2011.1.31","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/6.json"},
 	           {"index":"第5期",title:"世界上10种最美丽的花","date":"2012.1.19 ~ 2011.1.26","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/5.json"},
 			   {"index":"第4期",title:"美丽的蝴蝶，忽隐又忽现，留恋花丛间。","date":"2012.1.15 ~ 2011.1.18","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/4.json"},
                {"index":"第3期",title:"玫瑰爱人，让玫瑰伴你一生不再有伤痕。","date":"2011.11.28 ~ 2011.12.4","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/3.json"},
