--- a/floworld/AndroidManifest.xml
+++ b/floworld/AndroidManifest.xml
@@ -5,6 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application android:name=".AppApplication"
         android:icon="@drawable/icon"
