--- a/floworld/AndroidManifest.xml
+++ b/floworld/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application android:name=".AppApplication"
         android:icon="@drawable/icon"
@@ -19,7 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <receiver android:name=".AppBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
         <activity android:name=".appreciate.AppreciateTabActivity"></activity>
         <activity android:name=".appreciate.AppreciateLatestActivity"></activity>
         <activity android:name=".appreciate.AppreciateLatestDetailsActivity" android:screenOrientation="portrait"></activity>
