--- a/floworld/AndroidManifest.xml
+++ b/floworld/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.tianxia.app.floworld"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="V0.9 Beta">
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
