--- a/floworld/data/json/appreciate.json
+++ b/floworld/data/json/appreciate.json
@@ -1,7 +1,7 @@
 {
     "version-code":2,
     "version-name":"V1.0",
-    "version-update":"花界V1.0发布了，推荐更新:<br/>1.支持离线下载<br/>2.支持主题皮肤切换。",
+    "version-update":"花界V1.0发布了,增加新特性:\n1. 支持离线下载;\n2. 支持主题皮肤切换;\n3. 其他大量贴心优化.\n强烈推荐更新!",
     "base-url":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/",
     "latest":{"add":12,"list":"appreciate-latest.json"},
     "most":{"list":"appreciate-most.json"},
