--- a/floworld/data/json/appreciate/appreciate-archiver.json
+++ b/floworld/data/json/appreciate/appreciate-archiver.json
@@ -1,5 +1,6 @@
 {
     "archiver":[
+	           {"index":"第7期",title:"一套window7玫瑰主题","date":"2012.2.01 ~ 2011.2.11","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/7.json"},
                {"index":"第6期",title:"十二月花","date":"2012.1.26 ~ 2011.1.31","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/6.json"},
 	           {"index":"第5期",title:"世界上10种最美丽的花","date":"2012.1.19 ~ 2011.1.26","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/5.json"},
 			   {"index":"第4期",title:"美丽的蝴蝶，忽隐又忽现，留恋花丛间。","date":"2012.1.15 ~ 2011.1.18","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/4.json"},
