add the company moudle and fix lots of bugs
1. improve the tab ui
2. improve the archiver list ui
3. improve the discuss list ui
4. improve the setting activity ui
5. fix the discuss and archiver kinds image index
6. add some kinds image

--- a/floworld/data/json/appreciate.json
+++ b/floworld/data/json/appreciate.json
@@ -7,5 +7,6 @@
     "latest":{"add":12,"list":"appreciate-latest.json"},
     "most":{"list":"appreciate-most.json"},
     "category":{"list":"appreciate-category.json"},
-    "archiver":{"list":"appreciate-archiver.json"}
+    "archiver":{"list":"appreciate-archiver.json"},
+	"company":{"list":"appreciate-company.json"}
 }
