--- a/floworld/data/json/appreciate/appreciate-company.json
+++ b/floworld/data/json/appreciate/appreciate-company.json
@@ -6,7 +6,7 @@
 			"address":"上海松江区文翔路文翔名苑3088弄77号",
 			"tel":"0215764850",
 			"phone":"15900685140",
-			"business":"鲜花,仿真花,干花,宠物花束,花车,花篮,礼品,盆花,盆景出租出售"},
+			"business":"鲜花,仿真花,干花,宠物花束,花车,花篮,礼品,盆花,盆景租售"},
 			{
 	        "type":1,
             "name":"花儿朵朵",
