convert the app_tips_bg to 9patch png and add the image-scale-type arg in some cases

--- a/floworld/data/json/appreciate/appreciate-archiver.json
+++ b/floworld/data/json/appreciate/appreciate-archiver.json
@@ -1,13 +1,14 @@
 {
     "archiver":[
-	           {"index":"第9期",title:"三月里的长寿花","date":"2012.2.21 ~ 2011.3.08","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/9.json"},
-	           {"index":"第8期",title:"《花儿朵朵》花店","date":"2012.2.12 ~ 2011.2.21","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/8.json"},
-	           {"index":"第7期",title:"一套window7玫瑰主题","date":"2012.2.01 ~ 2011.2.11","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/7.json"},
+               {"index":"第10期",title:"《花儿朵朵》花店购物单","date":"2012.3.08 ~ 2011.3.15","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/10.json"},
+               {"index":"第9期",title:"三月里的长寿花","date":"2012.2.21 ~ 2011.3.08","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/9.json"},
+               {"index":"第8期",title:"《花儿朵朵》花店","date":"2012.2.12 ~ 2011.2.21","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/8.json"},
+               {"index":"第7期",title:"一套window7玫瑰主题","date":"2012.2.01 ~ 2011.2.11","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/7.json"},
                {"index":"第6期",title:"十二月花","date":"2012.1.26 ~ 2011.1.31","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/6.json"},
-	           {"index":"第5期",title:"世界上10种最美丽的花","date":"2012.1.19 ~ 2011.1.26","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/5.json"},
-			   {"index":"第4期",title:"美丽的蝴蝶，忽隐又忽现，留恋花丛间。","date":"2012.1.15 ~ 2011.1.18","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/4.json"},
+               {"index":"第5期",title:"世界上10种最美丽的花","date":"2012.1.19 ~ 2011.1.26","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/5.json"},
+               {"index":"第4期",title:"美丽的蝴蝶，忽隐又忽现，留恋花丛间。","date":"2012.1.15 ~ 2011.1.18","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/4.json"},
                {"index":"第3期",title:"玫瑰爱人，让玫瑰伴你一生不再有伤痕。","date":"2011.11.28 ~ 2011.12.4","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/3.json"},
                {"index":"第2期",title:"一花一世界","date":"2011.11.22 ~ 2011.11.27","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/2.json"},
-			   {"index":"第1期",title:"花儿朵朵","date":"2011.11.17 ~ 2011.11.21","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/1.json"}		   
+               {"index":"第1期",title:"花儿朵朵","date":"2011.11.17 ~ 2011.11.21","json":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/archiver/1.json"}           
             ]
 }
