--- a/floworld/.classpath
+++ b/floworld/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="lib/youmi-android.jar"/>
+	<classpathentry kind="lib" path="libs/youmi-android.jar"/>
+	<classpathentry kind="lib" path="libs/AndroidAnalyticSDK3.2.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
