--- a/floworld/data/json/appreciate.json
+++ b/floworld/data/json/appreciate.json
@@ -1,10 +1,10 @@
 {
-    "version-code":2,
-    "version-name":"V1.0_Base(20120310)",
-    "version-update":"花界V1.0 Base(20120310)版本发布了,增加新特性:\n1. 主界面改进;\n2. 增加统计分析模块;\n3. 增加广告模块;\n4. 增加用户反馈以及其他设置;\n5. 其它大量小体贴优化.\n强烈推荐更新!",
-    "version-download":"http://api.kaiyuanxiangmu.com/floworld/data/download/floworld_v1.0_base(20100310).apk",
+    "version-code":3,
+    "version-name":"V1.0_Base(20120318)",
+    "version-update":"花界V1.0 Base(20120318)版本发布了,增加新特性:\n1. 完善搜索模块;\n2. 增加关于界面;\n3. 修复评花的点击出错的重大bug;\n4. 其它若干贴心功能优化.\n强烈推荐更新!",
+    "version-download":"http://api.kaiyuanxiangmu.com/floworld/data/download/floworld_v1.0_base(20100318).apk",
 	"base-url":"http://api.kaiyuanxiangmu.com/floworld/data/json/appreciate/",
-    "latest":{"add":12,"list":"appreciate-latest.json"},
+    "latest":{"add":10,"list":"appreciate-latest.json"},
     "most":{"list":"appreciate-most.json"},
     "category":{"list":"appreciate-category.json"},
     "archiver":{"list":"appreciate-archiver.json"},
