--- a/baseworld/.classpath
+++ b/baseworld/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/AndroidAnalyticSDK3.2.1.jar"/>
+	<classpathentry kind="lib" path="libs/alipay_plugin.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
