fix the favorite list icon bug

--- a/floworld/AndroidManifest.xml
+++ b/floworld/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_LOGS"/>
 
@@ -18,8 +17,10 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Black.NoTitleBar">
         <meta-data android:value="4f589f105270154265000096" android:name="UMENG_APPKEY" />
-        <!-- <meta-data android:value="Offical" android:name="UMENG_CHANNEL"/> -->
-        <meta-data android:value="Google" android:name="UMENG_CHANNEL"/>
+        <meta-data android:value="Gfan" android:name="UMENG_CHANNEL"/>
+        <!-- <meta-data android:value="AppChina" android:name="UMENG_CHANNEL"/>
+        <meta-data android:value="Official" android:name="UMENG_CHANNEL"/>
+        <meta-data android:value="Google" android:name="UMENG_CHANNEL"/> -->
         <activity android:name="com.tianxia.lib.baseworld.main.MainTabFrame"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
