--- a/floworld/data/json/appreciate.json
+++ b/floworld/data/json/appreciate.json
@@ -1,8 +1,8 @@
 {
-    "version-code":3,
-    "version-name":"V1.0_Base(20120318)",
-    "version-update":"花界V1.0 Base(20120318)版本发布了,增加新特性:\n1. 完善搜索模块;\n2. 增加关于界面;\n3. 修复评花的点击出错的重大bug;\n4. 其它若干贴心功能优化.\n强烈推荐更新!",
-    "version-download":"floworld/data/download/floworld_v1.0_base(20100318).apk",
+    "version-code":4,
+    "version-name":"V1.0_Beta",
+    "version-update":"花界V1.0 Beta版本发布了,增加新特性:\n1. 增加双机备份服务器，更快速更稳定;\n2. 集成支付宝捐赠功能;\n3. 修复收藏菜单，收藏分类，评花出错等若干bug;\n4. 其它若干贴心功能优化.\n强烈推荐更新!",
+    "version-download":"floworld/data/download/floworld_v1.0_beta(Offcial).apk",
     "latest":{"add":10,"list":"floworld/data/json/appreciate/appreciate-latest.json"},
     "most":{"list":"floworld/data/json/appreciate/appreciate-most.json"},
     "category":{"list":"floworld/data/json/appreciate/appreciate-category.json"},
