--- a/floworld/AndroidManifest.xml
+++ b/floworld/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.tianxia.app.floworld"
-      android:versionCode="4"
-      android:versionName="V1.0 Beta">
+      android:versionCode="5"
+      android:versionName="V1.0">
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,10 +17,11 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Black.NoTitleBar">
         <meta-data android:value="4f589f105270154265000096" android:name="UMENG_APPKEY" />
-        <meta-data android:value="Dev" android:name="UMENG_CHANNEL"/>
+        <meta-data android:value="gfan" android:name="UMENG_CHANNEL" />
+        <meta-data  android:value="10020" android:name="YOUMI_CHANNEL" />
         <!-- <meta-data android:value="Gfan" android:name="UMENG_CHANNEL"/>
         <meta-data android:value="AppChina" android:name="UMENG_CHANNEL"/>
-        <meta-data android:value="Official" android:name="UMENG_CHANNEL"/>
+        <meta-data android:value="official" android:name="UMENG_CHANNEL"/>
         <meta-data android:value="Google" android:name="UMENG_CHANNEL"/> -->
         <activity android:name="com.tianxia.lib.baseworld.main.MainTabFrame"
             android:screenOrientation="portrait"
@@ -30,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".AppBroadcastReceiver">
+        <receiver android:name="com.tianxia.lib.baseworld.BaseBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
