--- a/floworld/AndroidManifest.xml
+++ b/floworld/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Black.NoTitleBar">
         <meta-data android:value="4f589f105270154265000096" android:name="UMENG_APPKEY" />
-        <meta-data android:value="gfan" android:name="UMENG_CHANNEL" />
+        <meta-data android:value="Dev" android:name="UMENG_CHANNEL" />
         <meta-data  android:value="10020" android:name="YOUMI_CHANNEL" />
         <!-- <meta-data android:value="Gfan" android:name="UMENG_CHANNEL"/>
         <meta-data android:value="AppChina" android:name="UMENG_CHANNEL"/>
