--- a/healthworld/AndroidManifest.xml
+++ b/healthworld/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
@@ -40,6 +41,7 @@
         <activity android:name=".category.CategoryListActivity"></activity>
         <activity android:name=".digest.DigestTabActivity"></activity>
         <activity android:name=".digest.ChapterListActivity"></activity>
+        <activity android:name=".digest.ChapterDetailsActivity"></activity>
         <activity android:name=".favorite.FavoriteTabActivity"></activity>
         <activity android:name=".setting.SettingTabActivity"></activity>
         <activity android:name="com.tianxia.lib.baseworld.activity.SettingAboutActivity"></activity>
